--- a/src/client/jsx/styles/template.css
+++ b/src/client/jsx/styles/template.css
@@ -1,8 +1,21 @@
 
+.placeholder {
+    background-color: var(--box-placeholder);
+    border-radius: var(--box-radius);
+    
+    animation: 0.5s infinite alternate placeholder-effect;
+}
+.placeholder-inner {
+    background-color: var(--box-placeholder-inner);
+    border-radius: 1e10px;
+
+    animation: 0.25s infinite alternate placeholder-effect;
+}
+
 button {
     display: flex;
     align-items: center;
-    gap: var(--gap);
+    gap: var(--items-gap);
     background-color: transparent;
     padding: 10px 15px;
     border: none;
