develop load more

--- a/src/client/jsx/pages/Home.css
+++ b/src/client/jsx/pages/Home.css
@@ -10,6 +10,10 @@
     justify-content: right;
     gap: var(--items-gap);
 }
+@media screen and (max-width: 600px) {
+    .header    { padding: var(--padding) !important; }
+    .categorys { border-bottom: 1px solid var(--line); }
+}
 
 .categorys {
     position: sticky;
